--- a/frontend/src/components/user/listOfTrips/trip.css
+++ b/frontend/src/components/user/listOfTrips/trip.css
@@ -3,7 +3,7 @@
     background-color: transparent;
 }
 
-form {
+.container {
     background-color: white;
     width: 300px;
 }
@@ -19,7 +19,6 @@ form {
 /*yess*/
 .container {
     display: 'flex';
-    /* flex-wrap: 'wrap'; */
     background-color: transparent;
     width: 120px;
   }
@@ -31,7 +30,7 @@ form {
     margin-top: 20px;
 }
 
-input {
+.textField {
     padding-left: 10px;
 }
 
