--- a/frontend/src/components/user/listOfTrips/trip.css
+++ b/frontend/src/components/user/listOfTrips/trip.css
@@ -2,11 +2,11 @@
     width: 200px;
     background-color: transparent;
 }
-
+/* 
 form {
     background-color: white;
     width: 300px;
-}
+} */
 
 #typeName {
     width: 50px;
